Fix display on mobile and tablet devices

--- a/estilos.css
+++ b/estilos.css
@@ -21,7 +21,7 @@ body{
 	background-color: rgba(119, 118, 118, 0.1);
 }
 
-.header{
+header{
 	position: fixed;
 	width: 100%;
 	background-color: rgba(0,0,0,0.5);
@@ -32,19 +32,19 @@ body{
 	z-index: 60;
 }
 
-.header ul{
+header ul{
 	text-align: left;
 	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 	z-index: 50;
 }
 
-.header ul li{
+header ul li{
 	list-style: none;
 	display: inline-block;
 }
 
-.header ul li a{
+header ul li a{
 	display: block;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -55,8 +55,28 @@ body{
 	padding: 18px;
 }
 
-.header ul li a:hover{
+header ul li a:hover{
 	background-color: rgba(226, 250, 7, 0.5);
+}
+
+/* elementos del menu desplegable*/
+#btn-menu {
+    display: none;   /* oculta el checkbox cuando no es necesario*/
+} 
+header {
+    width: 100%;
+	z-index: 10;	/* coloca el checkbox por encima del contenido*/
+} 
+header label {     /* coloca el checkbox en un lugar y tamaño exactos*/
+    display: none;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 20px;
+    top: 30px;
+} 
+header label:hover {
+    cursor: pointer;    /* cambia el cursor sobre el checkbox para indicar la interacción*/
 }
 
 .container1{
@@ -103,13 +123,61 @@ article .row:after{
   	clear: both;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 860px) {
+	header ul li a{
+		font-size: 16px;
+		padding: 10px;
+	}
+	.container1 .title{
+		display:flexbox;
+		font-size: 3.5em;
+		max-width: 70%;
+	}
+	.container1 .chavo{
+		display: block;
+	}
+	article .column{
+		line-height: 1.8; 
+	}
+}
+
+@media screen and (max-width: 640px) {
+  .container1 .chavo{
+	  position: relative;
+	  left:60%
+  }
   article .column{
 	margin: auto;
     width: 100%;
   }
-}
+  header ul{
+	  display: flex;
+	  flex-direction: column;
+  }
+  nav{
+	position: fixed;  /* sostiene la posición aunque se haga scroll en el contenido */
+	float:right;
+    background: rgba(0.5, 0.5, 0.5, 0.2); /* rojo, verde, azul, alpha (transparencia) */
+	z-index: 30; /* para asegurar que el menu esta por encima de todo lo demás*/
+    width: 40%; /* se refiere al ancho del fondo del menu y no a los botones */
+    margin-left: -60%; /* se oculta porque se coloca por fuera de la ventana*/
+	margin-top: 15%;
+	transition: all 1s;   /* la animación de desplegar el menu dura 1 segundo*/
+  }
+  
+  header label{
+	  display: block;
+  }
 
+  #btn-menu{
+	position: absolute;
+	top: 0px;
+  }
+	
+  #btn-menu:checked ~ nav {  /* el checkbox controla las dos posiciones del menu */
+		margin-left: 1px;
+  }
+}
 h1{
 	font-size: 2.5em;
 	margin-top: 9px;
